PythonPreprocessor/Testing/HelloWorld.err
#INCLUDE "Symbols.basinc"
 ^
line# 3, col# 1 Error: syntax error
